--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ script_includes:
     <div class="post-meta text-muted">
       <!-- published date -->
       <span>
-        <!-- {{ site.data.locales[lang].post.posted }} -->
+        {{ site.data.locales[lang].post.posted }}
         {% include datetime.html date=page.date tooltip=true lang=lang %}
       </span>
 
