--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -16,8 +16,8 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
   height: 100%;
   overflow-y: auto;
   width: v.$sidebar-width;
-  background: url('/assets/img/sidebar_background.jpg') no-repeat center top;
-  background-size: contain;
+  background: url('/assets/img/sidebar_background.jpg') no-repeat center 30%;
+  background-size: cover;
   background-attachment: fixed; 
   border-right: 1px solid var(--sidebar-border-color);
 
