--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -20,6 +20,7 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
   background-size: cover;
   background-attachment: fixed; 
   border-right: 1px solid var(--sidebar-border-color);
+  filter: brightness(0.95) contrast(1.05);
 
   /* Hide scrollbar for IE, Edge and Firefox */
   -ms-overflow-style: none; /* IE and Edge */
