--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -182,6 +182,7 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
     padding-right: 1rem;
     margin-bottom: 1.5rem;
     justify-content: center;
+    gap: 1rem;
 
     @include bp.xxxl {
       padding-left: 2.75rem;
